--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 li.setAttribute("class", "list-group-item");
 
                 // fill the list item with id, title and distance of the loaded tour
-                li.innerHTML = oois[i].title + ", Strecke " + Math.round(oois[i].length) + " m " + oois[i].geometry +;
+                li.innerHTML = oois[i].title + ", Strecke " + Math.round(oois[i].length) + " m " + oois[i].geometry ;
 
                 // append list item to unordered list
                 tourList.appendChild(li);
